--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SwinSchool;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SwinSchool.mdf"/>
+    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Data Source=IT03;Initial Catalog=SwinSchool;Integrated Security=SSPI"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
@@ -32,6 +32,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing"/>
         <add namespace="System.Web.WebPages"/>
+        <add namespace="SwinSchool.CommonShared.Dto"/>
       </namespaces>
     </pages>
     <profile defaultProvider="DefaultProfileProvider">
