--- a/dev/SwinSchool/SwinSchool/SwinSchool.DAL/SwinSchool.DAL.csproj
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.DAL/SwinSchool.DAL.csproj
@@ -48,9 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO\AdoImpl\DaoConnection.cs" />
+    <Compile Include="DAO\AdoImpl\MyUserAdoDao.cs" />
     <Compile Include="DAO\Impl\MyUserDao.cs" />
     <Compile Include="DAO\IMyUserDao.cs" />
+    <Compile Include="DataTableExtensions.cs" />
     <Compile Include="Entities\MyUser.cs" />
+    <Compile Include="MapToColumnAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolContext.cs" />
     <Compile Include="SchoolInitializer.cs" />
