--- a/dev/SwinSchool/SwinSchool/SwinSchool.Services/SwinSchool.Services.csproj
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.Services/SwinSchool.Services.csproj
@@ -55,12 +55,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IService.cs" />
     <Compile Include="Mappers\MapperConfig.cs" />
     <Compile Include="Mappers\Mapping.cs" />
     <Compile Include="MyUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceFactory.cs" />
+    <Compile Include="ServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SwinSchool.CommonShared\SwinSchool.CommonShared.csproj">
