--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
@@ -4,10 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-  <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -95,36 +91,18 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <contexts>
-      <context type="SwinSchool.DAL.SchoolContext, SwinSchool.DAL">
-        <databaseInitializer type="SwinSchool.DAL.SchoolInitializer, SwinSchool.DAL" />
-      </context>
-    </contexts>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
-
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IMyUserBO" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <security mode="None">
-            <transport clientCredentialType="None" proxyCredentialType="None" realm="" />
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
-          </security>
+      <wsHttpBinding>
+        <binding name="BindingDefault">
+          <reliableSession enabled="true"/>
         </binding>
-      </basicHttpBinding>
+      </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:17489/MyUserBO.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMyUserBO" contract="IMyUserBO" name="BasicHttpBinding_IMyUserBO" />
+      <endpoint address="http://localhost:17489/ShopCartBO.svc" binding="wsHttpBinding"
+          bindingConfiguration="BindingDefault" contract="IShopCartBO"
+          name="wsHttpBinding_IShopCartBO" />
     </client>
   </system.serviceModel>
 </configuration>
