--- a/dev/SwinSchool/SwinSchool/SwinSchool.DAL/SwinSchool.DAL.csproj
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.DAL/SwinSchool.DAL.csproj
@@ -51,10 +51,18 @@
     <Compile Include="DAO\AdoImpl\DaoConnection.cs" />
     <Compile Include="DAO\AdoImpl\MyUserAdoDao.cs" />
     <Compile Include="DAO\Impl\MyUserDao.cs" />
+    <Compile Include="DAO\Impl\ProductDao.cs" />
     <Compile Include="DAO\IMyUserDao.cs" />
+    <Compile Include="DAO\IProductDao.cs" />
     <Compile Include="DataTableExtensions.cs" />
     <Compile Include="Entities\MyUser.cs" />
+    <Compile Include="Entities\Product.cs" />
     <Compile Include="MapToColumnAttribute.cs" />
+    <Compile Include="Migrations\201605020957379_InitDB.cs" />
+    <Compile Include="Migrations\201605020957379_InitDB.Designer.cs">
+      <DependentUpon>201605020957379_InitDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolContext.cs" />
     <Compile Include="SchoolInitializer.cs" />
@@ -62,12 +70,24 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Entities\SwinSchoolEntities.cd" />
+    <Content Include="Web.config" />
+    <None Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SwinSchool.CommonShared\SwinSchool.CommonShared.csproj">
       <Project>{ed51eedd-db50-4b47-a1a3-552ef06245ee}</Project>
       <Name>SwinSchool.CommonShared</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201605020957379_InitDB.resx">
+      <DependentUpon>201605020957379_InitDB.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
