Pass task 6.2 using MSMQ for communication between Application Layer and Business Logic

--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Service/output.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Service/output.config
@@ -3,7 +3,7 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_IShopCartBO" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_IMyUserBO" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -23,11 +23,11 @@
             </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:17489/ShopCartBO.svc" binding="wsHttpBinding"
-                bindingConfiguration="WSHttpBinding_IShopCartBO" contract="IShopCartBO"
-                name="WSHttpBinding_IShopCartBO">
+            <endpoint address="http://localhost:17489/MyUserBO.svc" binding="wsHttpBinding"
+                bindingConfiguration="WSHttpBinding_IMyUserBO" contract="IMyUserBO"
+                name="WSHttpBinding_IMyUserBO">
                 <identity>
-                    <userPrincipalName value="WeryMac-PC\WeryMac" />
+                    <userPrincipalName value="Nnguyen@vic.lotons.com.au" />
                 </identity>
             </endpoint>
         </client>
