--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
@@ -98,11 +98,23 @@
           <reliableSession enabled="true"/>
         </binding>
       </wsHttpBinding>
+      <msmqIntegrationBinding>
+        <binding name="UserAccountQueueBinding">
+          <security mode="None"/>
+        </binding>
+      </msmqIntegrationBinding>
     </bindings>
     <client>
+      <endpoint address="http://localhost:17489/MyUserBO.svc" binding="wsHttpBinding"
+          bindingConfiguration="BindingDefault" contract="IMyUserBO"
+          name="wsHttpBinding_IMyUserBO" />
       <endpoint address="http://localhost:17489/ShopCartBO.svc" binding="wsHttpBinding"
           bindingConfiguration="BindingDefault" contract="IShopCartBO"
           name="wsHttpBinding_IShopCartBO" />
+      <endpoint address="msmq.formatname:DIRECT=OS:.\private$\UserAccountQueue" binding="msmqIntegrationBinding" 
+          bindingConfiguration="UserAccountQueueBinding" contract="SwinSchool.WebUI.Service.IUserAccountQueue"
+          name="UserAccountEndpoint" >
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
