--- a/dev/SwinSchool/SwinSchool/SwinSchool.BusinessLogicServer/SwinSchool.BusinessLogicServer.csproj
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.BusinessLogicServer/SwinSchool.BusinessLogicServer.csproj
@@ -62,6 +62,7 @@
       <HintPath>..\packages\Microsoft.Bcl.1.1.10\lib\net40\System.IO.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Runtime, Version=2.6.10.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.1.1.10\lib\net40\System.Runtime.dll</HintPath>
       <Private>True</Private>
@@ -94,6 +95,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailService.cs" />
     <Compile Include="IShopCartBO.cs" />
     <Compile Include="Mappers\MapperConfig.cs" />
     <Compile Include="Mappers\Mapping.cs" />
@@ -105,6 +107,7 @@
     <Compile Include="ShopCartBO.svc.cs">
       <DependentUpon>ShopCartBO.svc</DependentUpon>
     </Compile>
+    <Compile Include="UserMaintenanceService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
