--- a/dev/SwinSchool/SwinSchool/SwinSchool.BusinessLogicServer/Web.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.BusinessLogicServer/Web.config
@@ -7,7 +7,9 @@
   <connectionStrings>
     <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=SwinSchool;Integrated Security=SSPI" />
   </connectionStrings>
-  
+  <appSettings>
+    <add key="AdminEmail" value="contact@wnext.net.au"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
