--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Web.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="SwinSchool.CommonShared.Dto"/>
+        <add namespace="SwinSchool.WebUI.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
