--- a/dev/SAllocatePlus/Tna.SAllocatePlus/TnaSAllocatePlus.DataAccessLayer.EF/TnaSAllocatePlus.DataAccessLayer.EF.csproj
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/TnaSAllocatePlus.DataAccessLayer.EF/TnaSAllocatePlus.DataAccessLayer.EF.csproj
@@ -29,7 +29,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoPoco, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoPoco.1.0.0.0\lib\AutoPoco.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -49,11 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dao\JobDao.cs" />
-    <Compile Include="Migrations\201605250657195_InitialCreate.cs" />
-    <Compile Include="Migrations\201605250657195_InitialCreate.Designer.cs">
-      <DependentUpon>201605250657195_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201605260629482_InitialCreate.cs" />
+    <Compile Include="Migrations\201605260629482_InitialCreate.Designer.cs">
+      <DependentUpon>201605260629482_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TnaContext.cs" />
   </ItemGroup>
@@ -72,8 +80,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201605250657195_InitialCreate.resx">
-      <DependentUpon>201605250657195_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201605260629482_InitialCreate.resx">
+      <DependentUpon>201605260629482_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
