--- a/dev/SwinSchool/SwinSchool/SwinSchool.CommonShared/SwinSchool.CommonShared.csproj
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.CommonShared/SwinSchool.CommonShared.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Dto\MyUserDto.cs" />
     <Compile Include="Dto\ProductDto.cs" />
     <Compile Include="Dto\ResetPasswordRequestDto.cs" />
+    <Compile Include="EncryptionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomManager.cs" />
     <Compile Include="Constants.cs" />
