--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Service/output.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Service/output.config
@@ -27,7 +27,7 @@
                 bindingConfiguration="WSHttpBinding_IMyUserBO" contract="IMyUserBO"
                 name="WSHttpBinding_IMyUserBO">
                 <identity>
-                    <userPrincipalName value="Wery7-PC\Wery7" />
+                    <userPrincipalName value="Nnguyen@vic.lotons.com.au" />
                 </identity>
             </endpoint>
         </client>
