--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/SwinSchool.WebUI.csproj
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/SwinSchool.WebUI.csproj
@@ -149,17 +149,21 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CartViewModel.cs" />
     <Compile Include="Models\JsonResponseMessage.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Security\UserIdentity.cs" />
+    <Compile Include="Security\UserPrincipal.cs" />
     <Compile Include="Scripts\ProductListViewModel.cs" />
     <Compile Include="Models\ResetPasswordRequestViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\MyUserBOClient.cs" />
+    <Compile Include="Service\ServiceFactory.cs" />
     <Compile Include="Service\ShopCartBOClient.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -253,17 +257,21 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\User\Index.cshtml" />
-    <Content Include="Views\User\Edit.cshtml" />
-    <Content Include="Views\User\Create.cshtml" />
-    <Content Include="Views\User\ResetPassword.cshtml" />
-    <Content Include="Views\User\ResetPasswordSuccess.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
+    <Content Include="Views\Admin\Create.cshtml" />
+    <Content Include="Views\Admin\ResetPassword.cshtml" />
+    <Content Include="Views\Admin\ResetPasswordSuccess.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Cart\ProductListPartial.cshtml" />
     <Content Include="Views\Cart\View.cshtml" />
     <Content Include="Views\Cart\CartProductListPartial.cshtml" />
     <Content Include="Views\Cart\CheckoutSuccess.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Employee\Index.cshtml" />
+    <Content Include="Views\Shared\Partial\_EmployeeProfilePartial.cshtml" />
+    <Content Include="Views\Employee\ResetPassword.cshtml" />
+    <Content Include="Views\Employee\ResetPasswordSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
