--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
+  <connectionStrings>
+    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=SwinSchoolUser;Integrated Security=SSPI" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -30,17 +33,18 @@
     </pages>
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
-        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="SchoolContext" applicationName="/" />
+        <add name="DefaultProfileProvider" 
+             type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" 
+             connectionStringName="SchoolContext" 
+             applicationName="SwinSchool" />
       </providers>
     </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
+    <roleManager defaultProvider="MyRoleProvider" enabled="true">
       <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="SchoolContext" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
-      <providers>
-        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="SchoolContext" applicationName="/" />
+        <add name="MyRoleProvider" 
+             connectionStringName="SchoolContext" 
+             applicationName="SwinSchool" 
+             type="System.Web.Security.SqlRoleProvider" />
       </providers>
     </roleManager>
     <!--
