--- a/dev/SwinSchool/SwinSchool/SwinSchool.DAL/Web.config
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.DAL/Web.config
@@ -5,7 +5,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\SQLEXPRESS14;Initial Catalog=SwinSchool;Integrated Security=SSPI" />
+    <add name="SchoolContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=SwinSchool;Integrated Security=SSPI" />
   </connectionStrings>
   <entityFramework>
     <contexts>
