--- a/dev/SAllocatePlus/Tna.SAllocatePlus/TnaSAllocatePlus.DataAccessLayer.EF/App.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/TnaSAllocatePlus.DataAccessLayer.EF/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TnaContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\SQLEXPRESS14;Initial Catalog=TnaSAllocatePlus;Integrated Security=SSPI" />
+    <add name="TnaContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=TnaSAllocatePlus;Integrated Security=SSPI" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
