--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Web.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Tna.SAllocatePlus.AdminWebUI" />
+        <add namespace="Tna.SAllocatePlus.AdminWebUI.Models" />
+        <add namespace="Tna.SAllocatePlus.AdminWebUI.Security" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
