--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Tna.SAllocatePlus.AdminWebUI.csproj
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Tna.SAllocatePlus.AdminWebUI.csproj
@@ -118,20 +118,36 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiControllers\JobApiController.cs" />
+    <Compile Include="ApiControllers\CostCentreController.cs" />
+    <Compile Include="ApiControllers\JobController.cs" />
+    <Compile Include="ApiControllers\StaffController.cs" />
+    <Compile Include="ApiControllers\UserController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JobController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\JsonResponseMessage.cs" />
+    <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\UserPrincipal.cs" />
+    <Compile Include="ServiceFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AppJs\controllers\jobDetailCtrl.js" />
+    <Content Include="AppJs\controllers\jobListCtrl.js" />
+    <Content Include="AppJs\helpers\ajax-helper.js" />
+    <Content Include="AppJs\jobApp.js" />
     <Content Include="AppJs\services\jobService.js" />
+    <Content Include="AppJs\services\staffService.js" />
+    <Content Include="AppJs\services\userService.js" />
+    <Content Include="AppJs\templates\detail.html" />
+    <Content Include="AppJs\templates\jobList.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap\dist\css\bootstrap-theme.css" />
@@ -267,10 +283,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Job\Index.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
