--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Web.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Web.config
@@ -13,6 +13,28 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" />
+    </authentication>
+    <pages controlRenderingCompatibilityVersion="4.0">
+      <namespaces>
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Optimization" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
+        <add namespace="Tna.SAllocatePlus.AdminWebUI.Models" />
+        <add namespace="Tna.SAllocatePlus.AdminWebUI.Security" />
+        <add namespace="Tna.SAllocatePlus.CommonShared.Dto" />
+      </namespaces>
+    </pages>
+    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+      <providers>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="SchoolContext" />
+      </providers>
+    </sessionState>
   </system.web>
   <system.webServer>
     <handlers>
@@ -57,16 +79,15 @@
           <reliableSession enabled="true"/>
         </binding>
       </wsHttpBinding>
-      <msmqIntegrationBinding>
-        <binding name="UserAccountQueueBinding">
-          <security mode="None"/>
-        </binding>
-      </msmqIntegrationBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:52663/JobService.svc" binding="wsHttpBinding"
           bindingConfiguration="BindingDefault" contract="IJobService"
           name="JobServiceEndPoint" />
+      <endpoint address="http://localhost:52663/AccountService.svc" binding="wsHttpBinding"
+          bindingConfiguration="BindingDefault" contract="IAccountService"
+          name="AccountServiceEndPoint" />
+      
     </client>
   </system.serviceModel>
 </configuration>
