--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Tna.SAllocatePlus.AdminWebUI.csproj
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Tna.SAllocatePlus.AdminWebUI.csproj
@@ -142,12 +142,15 @@
   <ItemGroup>
     <Content Include="AppJs\controllers\jobDetailCtrl.js" />
     <Content Include="AppJs\controllers\jobListCtrl.js" />
-    <Content Include="AppJs\controllers\staffCtrl.js" />
+    <Content Include="AppJs\controllers\staffDetailCtrl.js" />
+    <Content Include="AppJs\controllers\staffListCtrl.js" />
     <Content Include="AppJs\helpers\ajax-helper.js" />
     <Content Include="AppJs\jobApp.js" />
     <Content Include="AppJs\services\jobService.js" />
     <Content Include="AppJs\services\staffService.js" />
     <Content Include="AppJs\services\userService.js" />
+    <Content Include="AppJs\StaffApp.js" />
+    <Content Include="AppJs\templates\staffDetail.html" />
     <Content Include="AppJs\templates\detail.html" />
     <Content Include="AppJs\templates\jobList.html" />
     <Content Include="AppJs\templates\staffList.html" />
